# mysteryann

./: .gitignore  .gitmodules  CITATION.cff  CLONE.md  CMakeLists.txt  README.md
.github/workflows/: workflow.yml
include/: index_bipartite.h  visited_list_pool.h
include/SQ/: common.hpp  neighbor.hpp
include/SQ/quant/: fp32_quant.hpp  quant.hpp  sq4_quant.hpp  sq8_quant.hpp
include/SQ/simd/: distance.hpp
include/mysteryann/: GorderPriorityQueue.h  distance.h  exceptions.h  index.h  index_nsg.h  neighbor.h  parameters.h  util.h
pybindings/: CMakeLists.txt  index_bindings.cpp  setup.py
pybindings/index_mystery.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pybindings/index_mystery_py.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: CMakeLists.txt  index.cpp  index_bipartite.cpp  index_nsg.cpp
tests/: CMakeLists.txt  test_bipartite_index.cpp  test_bipartite_save_load_search.cpp  test_build_add_inline_index.cpp  test_build_edge_add_after_link.cpp  test_build_real_bipartite.cpp  test_build_roargraph.cpp  test_csr_search.cpp  test_nsg_index.cpp  test_nsg_optimized_search.cpp  test_nsg_search.cpp  test_only_bipartite_build.cpp  test_only_search_bipartite.cpp  test_reorder_csr_search.cpp  test_search_real_bipartite.cpp  test_t2i_100.cpp  test_t2i_1k.cpp  test_util.cpp
